--- a/index.html
+++ b/index.html
@@ -39,14 +39,50 @@
     </header>
     <main>
       <section class="headCirclesContainer">
-        <h1 class="headCirclesHeader"></h1>
-        <button class="topHeadButton"></button>
-        <div class="releative">
-          <img class="absolute" src="img/Ellipse 2.svg" alt="" />
-          <img class="absolute" src="img/Ellipse 1.svg" alt="" />
-          <img class="absolute" src="img/Rectangle 3.svg" alt="" />
-          <img class="absolute" src="img/Collab.svg" alt="" />
-          <button class="circlesButton"></button>
+        <h1 class="headCirclesHeader">
+          Easy solution for builders and contractors to manage and execute
+          projects within budget range
+        </h1>
+        <button class="topHeadButton">Request Demo</button>
+
+        <div class="relative">
+          <img class="absolute bigCircle" src="img/Ellipse 2.svg" alt="" />
+          <img class="absolute smallCircle" src="img/Ellipse 1.svg" alt="" />
+          <img class="absolute rectangle" src="img/Rectangle 3.svg" alt="" />
+          <img class="absolute collabWords" src="img/Collab.svg" alt="" />
+          <button class="circlesButton absolute">Explore Product</button>
+        </div>
+      </section>
+
+      <section class="fiveIconsContainer">
+        <h2 class="fiveIconsHeader">Trusted by top brands</h2>
+
+        <div class="fiveIconsImgContainer">
+          <img
+            class="fiveIconsIcon"
+            src="./img/Standard Collection 0.svg"
+            alt=""
+          />
+          <img
+            class="fiveIconsIcon"
+            src="./img/Standard Collection 2.svg"
+            alt=""
+          />
+          <img
+            class="fiveIconsIcon"
+            src="./img/Standard Collection 3.svg"
+            alt=""
+          />
+          <img
+            class="fiveIconsIcon"
+            src="./img/Standard Collection 8.svg"
+            alt=""
+          />
+          <img
+            class="fiveIconsIcon"
+            src="./img/Standard Collection 9.svg"
+            alt=""
+          />
         </div>
       </section>
     </main>
