--- a/index.html
+++ b/index.html
@@ -85,6 +85,58 @@
           />
         </div>
       </section>
+      <section class="howCollabHelpContainer">
+        <h2>How does Collab-app help?</h2>
+        <div class="howHelpBox">
+          <div class="howHelpLeft">
+            <div class="howHelpBtn">
+              <button class="howHelpVendorBtn btnHelp">Vendor app</button>
+              <button class="HowHelpSupervisorBtn btnHelp">
+                Site Supervisor app
+              </button>
+            </div>
+            <div class="howHelpTextContainer">
+              <p class="howHelpText">
+                <span class="howHelpTextHeaders">Work/Material request:</span>
+                Whenever a client wants to start a work, request notifications
+                with date and time for materials and artisians will be promted
+                through their app.
+              </p>
+              <p class="howHelpText">
+                <span class="howHelpTextHeaders">Project Management:</span>
+                Work on multiple projects...
+                <span class="seeMore">see more</span>
+              </p>
+              <p class="howHelpText">
+                <span class="howHelpTextHeaders">Payment:</span> Get paid for
+                the step by step work... <span class="seeMore">see more</span>
+              </p>
+              <p class="howHelpText">
+                <span class="howHelpTextHeaders">Tutorials:</span> Explore the
+                video tutorials to learn...
+                <span class="seeMore">see more</span>
+              </p>
+            </div>
+          </div>
+          <div class="howHelpRight">
+            <img class="howHelpPhone" src="./img/Rectangle.svg" alt="" />
+          </div>
+        </div>
+      </section>
+      <section class="videoContainer">
+        <h2>Fastest, Safest & Budget friendly</h2>
+        <p class="videoPara">
+          Managing your projects on spreadsheet or messaging app is a
+          time-taking and inefficient way.They can't link various project data
+          effectively at once place , thus you won't be able to avoid project
+          cost escalation effectively .
+        </p>
+        <iframe
+          width="420"
+          height="320"
+          src="https://www.youtube.com/embed/lflCmjW7RlI"
+        ></iframe>
+      </section>
     </main>
   </body>
 </html>
