Added Done and Cards sections

--- a/index.html
+++ b/index.html
@@ -137,6 +137,81 @@
           src="https://www.youtube.com/embed/lflCmjW7RlI"
         ></iframe>
       </section>
+      <section class="projectDoneContainer">
+
+        <h2>Projects doner ON Collab</h2>
+  
+        
+          <div class="projectDoneCardsContainer">
+
+            <div class="projectDoneCard">
+              <img class="projectDoneImg" src="img/Rectangle 21.svg" alt="" />
+              <p class="projectDonePara1">Builder</p>
+              <p class="projectDonePara2">100+</p>
+            </div>
+  
+            <div class="projectDoneCard">
+              <img class="projectDoneImg" src="img/Rectangle 34.svg" alt="" />
+              <p class="projectDonePara1">Contractors</p>
+              <p class="projectDonePara2">50+</p>
+            </div>
+  
+            <div class="projectDoneCard">
+              <img class="projectDoneImg" src="img/Rectangle 35.svg" alt="" />
+              <p class="projectDonePara1">Design Build Firm</p>
+              <p class="projectDonePara2">30+</p>
+            </div>
+
+          </div>
+
+      </section>
+
+      <section class="collabAppsCardsContainer">
+        <h2>Ready to start with Collab apps?</h2>
+        <p class="collabAppsCardsPara">Choose the package that suits you.</p>
+
+        <div class="collabAppsDiscount">
+          <span class="collabAppsDiscountMonthly">Monthly</span>
+          <img src="./img/ToggleRight.svg" alt="">
+          <span class="collabAppsDiscountYearly">Yearly</span>
+          <span class="collabAppsDiscountTenProcents">10% Discount</span>
+        </div>
+
+
+        <div class="collabCardsConatainer">
+          <div class="card">
+            <h4>Basic</h4>
+            <h3>Rs.5000</h3>
+            <button class="collabCardsBtn">Request Demo</button>
+            <ul>
+              <li class="collabCardsList">Create BoQ</li>
+              <li class="collabCardsList">Release Purchase Orders</li>
+              <li class="collabCardsList">Cash flow analysis</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h4>Essential</h4>
+            <h3>Rs.5000</h3>
+            <button class="collabCardsBtn">Request Demo</button>
+            <ul class="collabCardsListContainer">
+              <li class="collabCardsList">Create BoQ</li>
+              <li class="collabCardsList">Release Purchase Orders</li>
+              <li class="collabCardsList">Cash flow analysis</li>
+              <li class="collabCardsList">Vendor App</li>
+              <li class="collabCardsList">Site Engineer App</li>
+              <li class="collabCardsList">Client App</li>
+            </ul>
+          </div>
+          <div class="card">
+            <h4>Enterprise</h4>
+            <h3>Contact sales team</h3>
+            <button class="collabCardsBtn">Request Demo</button>
+            <p>Unlock the full power to work effectively. Click “Request Demo” now.</p>
+          </div>
+        </div>
+      </section>
+
+      </div>
     </main>
   </body>
 </html>
