Added Join  section

--- a/index.html
+++ b/index.html
@@ -211,6 +211,25 @@
         </div>
       </section>
 
+      <!-- Join Us Section -->
+      <section class="collabJoinUsContainer">
+        <h2 class="collabJoinUsTitle">Join us</h2>
+        <p class="collabJoinUsPara">At Staart, we’re all about delivering better experiences for our customers. Join our team to make impact on the next billion users in the construction industry</p>
+        <button class="collabJoinUsBtn">Explore Oppurtunities</button>
+
+        <div class="collabJoinUs">
+          <div class="imgbox"><img class="collabJoinUsImg img1" src="img/joinUs/Ellipse 16.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img2" src="./img/joinUs/Ellipse 17.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img3" src="./img/joinUs/Ellipse 18.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img4" src="./img/joinUs/Ellipse 19.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img5" src="./img/joinUs/Ellipse 20.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img6"src="./img/joinUs/Ellipse 21.svg" alt=""></div>
+          <div class="imgbox"><p class="imgBoxPara">You?</p><img class="collabJoinUsImg img7" src="./img/joinUs/Ellipse 22.svg" alt=""></div>
+          <div class="imgbox"><img class="collabJoinUsImg img8"src="./img/joinUs/Ellipse 23.svg" alt=""></div>
+        </div>
+
+      </section>
+      
       </div>
     </main>
   </body>
